all in index conter sections middel

--- a/index.html
+++ b/index.html
@@ -15,5 +15,16 @@
             <li>About</li>
         </ul>
     </nav>
+    <div class="container">
+        <div class="songList">
+            <h1>Bet od NCS song no copy rigth </h1>
+            <div class="songItem">
+                <div class="bottom">
+                    <input type="range" id="myProgressBar" min="0" max="100">
+                    <div class="icons">icons</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
