this is edit css and add js file by ganeshB

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <ul>
@@ -19,12 +21,72 @@
         <div class="songList">
             <h1>Bet od NCS song no copy rigth </h1>
             <div class="songItem">
-                <div class="bottom">
-                    <input type="range" id="myProgressBar" min="0" max="100">
-                    <div class="icons">icons</div>
-                </div>
+                <img src="covers/1.jpg" alt="1">
+                <span class="songName">let me love song</span>
+
+                <span class="songlistplay">
+                    <span class="timestamp">5:30<i class="fa-duotone fa-play"></i></span></span>
+
+
+            </div>
+            <div class="songItem">
+                <img src="covers/1.jpg" alt="1">
+                <span class="songName">let me love song</span>
+
+                <span class="songlistplay">
+                    <span class="timestamp">5:30<i class="fa-duotone fa-play"></i></span></span>
+
+
+            </div>
+            <div class="songItem">
+                <img src="covers/1.jpg" alt="1">
+                <span class="songName">let me love song</span>
+
+                <span class="songlistplay">
+                    <span class="timestamp">5:30<i class="fa-duotone fa-play"></i></span></span>
+            </div>
+
+
+            <div class="songItem">
+                <img src="covers/1.jpg" alt="1">
+                <span class="songName">let me love song</span>
+
+                <span class="songlistplay">
+                    <span class="timestamp">5:30<i class="fa-duotone fa-play"></i></span></span>
+
+
+            </div>
+            <div class="songItem">
+                <img src="covers/1.jpg" alt="1">
+                <span class="songName">let me love song</span>
+
+                <span class="songlistplay">
+                    <span class="timestamp">5:30<i class="fa-duotone fa-play"></i></span></span>
+
+
+            </div>
+            <div class="songItem">
+                <img src="covers/1.jpg" alt="1">
+                <span class="songName">let me love song</span>
+
+                <span class="songlistplay">
+                    <span class="timestamp">5:30<i class="fa-duotone fa-play"></i></span></span>
+
+
+
+
             </div>
         </div>
-    </div>
+        <div class="bottom">
+            <input type="range" id="myProgressBar" min="0" max="100">
+            <div class="icons">
+                <i class="fa-solid fa-backward"></i>
+                <i class="fa-duotone fa-play"></i>
+                <i class="fa-solid fa-forward"></i>
+            </div>
+        </div>
+        <script src="https://kit.fontawesome.com/59525d4a38.js" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
 </body>
+
 </html>
